# flashcamp-internal

./: .dockerignore  DOCKER_README.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_BACKEND.md  README.md  TECHNICAL_DOCUMENTATION.md  docker-build.sh  docker-cleanup.sh  docker-compose.yml  env.example  flashcamp.db  pyproject.toml  pytest_summary.txt  run-local.sh  runway_test.json  stop-local.sh  test_data.json  tmp_check.html  tsconfig.json  vite.config.js  vite.config.ts
config/: policy.yaml
docs/: HIERARCHICAL_MODEL_INTEGRATION.md  metrics_guide.md
examples/: README.md  hierarchical_model_usage.py
flashcamp/: .dockerignore  .env  Dockerfile.backend  Dockerfile.frontend  README.md  README_QUICK_DEMO.md  TECHNICAL_DOCUMENTATION.md  __init__.py  alembic.ini  app.py  build.sh  complete_payload.json  correct_payload.json  docker-compose.yml  entrypoint.py  env.template  final_test_payload.json  fix_analyze_payload.json  fix_validation.py  manual_fix_payload.json  metrics_usage_report.md  pytest.ini  requirements.txt  run.sh  run_app.py  sample_payload.json  sync_metrics.py  temp_app.py  test_api.sh  test_custom_payload.json  test_local_api.sh  test_ml.py  verify_metrics.py
flashcamp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: cleanup_and_verify_metrics.py  cleanup_duplicate_metrics.py  evaluate_hierarchical_model.py  gen_metrics.py  generate_sample_dataset.py  optimize_threshold.py  smoke_test.py  test_enhanced_ml_engine.py  test_hierarchical_endpoints.py  test_hierarchical_model.py  test_prediction_api.py  test_real_hierarchical_model.py  (+3 more)
(+149 files in other folders)
